[tool.poetry]
name = "jmes-path"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jmespath = "^0.10.0"
flaky = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^20.8b1"
pytest-repeat = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
